<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="expense">Expense</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="value">Value</string>
    <string name="add_friend">Add Friend</string>
    <string name="split_the_bill">Split the Bill!</string>
    <string name="item_2">Item 2</string>
    <string name="item_1">Item 1</string>
    <string name="item_3">Item 3</string>
    <string name="itens_and_their_cost">Itens and their cost</string>
</resources>