<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.SplitTheBillActivity">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/valueTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense" />

    <TextView
        android:id="@+id/itemsTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itens_and_their_cost" />
</LinearLayout>